add day5 part2 solution